--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </a>
         <div class="praise-wrap">
           <div class="praise">
-            <img src="./images/state-thumbs-up.svg" alt=""> <span>9</span>
+            <img src="./images/state-thumbs-up.svg" alt="" class="praise-img">
+            <img src="./images/state-praised.svg" alt="" class="praised-img"> <span>9</span>
           </div>
           <div class="comment">
             <img src="./images/state-comment.svg" alt=""> 评论
@@ -68,8 +69,7 @@
             </span>
             <a class="user-reply">
               至尊宝
-            </a>
-            ：有内涵~
+            </a> ：有内涵~
           </div>
           <div class="comment-item">
             <a class="user-reply">
@@ -104,7 +104,7 @@
         </div>
         <div class="more-reply">
           <div class="spread">
-            查看全部<span>14</span>条评论
+            查看全部<span></span>条评论
             <img src="./images/comment-downarrow.svg" alt="">
           </div>
           <div class="pack-up">
@@ -128,7 +128,8 @@
         </div>
         <div class="praise-wrap">
           <div class="praise">
-            <img src="./images/state-thumbs-up.svg" alt=""> <span>4</span>
+            <img src="./images/state-thumbs-up.svg" alt="" class="praise-img">
+            <img src="./images/state-praised.svg" alt="" class="praised-img"> <span>4</span>
           </div>
           <div class="comment">
             <img src="./images/state-comment.svg" alt=""> 评论
@@ -150,8 +151,7 @@
             </span>
             <a class="user-reply">
               至尊宝
-            </a>
-            ：有内涵~
+            </a> ：有内涵~
           </div>
           <div class="comment-item">
             <a class="user-reply">
@@ -187,7 +187,8 @@
         </div>
         <div class="praise-wrap">
           <div class="praise">
-            <img src="./images/state-thumbs-up.svg" alt=""> <span>11</span>
+            <img src="./images/state-thumbs-up.svg" alt="" class="praise-img">
+            <img src="./images/state-praised.svg" alt="" class="praised-img"> <span>11</span>
           </div>
           <div class="comment">
             <img src="./images/state-comment.svg" alt=""> 评论
@@ -227,7 +228,8 @@
         </div>
         <div class="praise-wrap">
           <div class="praise">
-            <img src="./images/state-thumbs-up.svg" alt=""> <span>8</span>
+            <img src="./images/state-thumbs-up.svg" alt="" class="praise-img">
+            <img src="./images/state-praised.svg" alt="" class="praised-img"> <span>8</span>
           </div>
           <div class="comment">
             <img src="./images/state-comment.svg" alt=""> 评论
